@@ -1,21 +1,26 @@
 plugins {
   // https://github.com/nemerosa/versioning
-  id 'net.nemerosa.versioning' version '2.14.0'
+  id 'net.nemerosa.versioning' version '3.1.0'
 }
 
 ext {
-  interlokParentGradle = "https://raw.githubusercontent.com/adaptris/interlok-build-parent/main/v5/build.gradle"
-  interlokVersion = '5.0-SNAPSHOT'
-
-  includeWar='true'
+  testingCommonGradle = "https://raw.githubusercontent.com/interlok-testing/testing_common/refs/heads/master/common.gradle?timestamp=${new Date().getTime()}"
+//  testingCommonGradle = "../testing_common/common.gradle"
+  interlokTestingVersion = "0.1"
 }
 
 allprojects {
-  apply from: "${interlokParentGradle}"
-  // specify the version of the configuration.
+  apply from: "${testingCommonGradle}"
   version=versioning.info.full
 }
 
+tasks.named("functionalTest") {
+  jvmArgs("--add-opens", "java.management/javax.management=ALL-UNNAMED")
+}
+
+configurations.all {
+  exclude group: "org.apache.geronimo.specs", module: "geronimo-jms_1.1_spec"
+}
 
 dependencies {
   interlokRuntime ("com.adaptris:interlok-activemq:$interlokVersion") { changing=true }
@@ -23,4 +28,5 @@ dependencies {
 
   interlokJavadocs group: "com.adaptris", name: "interlok-activemq", version: "$interlokVersion", classifier: "javadoc", changing: true, transitive: false
   interlokJavadocs group: "com.adaptris", name: "interlok-jmx-activemq", version: "$interlokVersion", classifier: "javadoc", changing: true, transitive: false
+  testImplementation group: "com.adaptris", name: "interlok-testing-common", version: "$interlokTestingVersion"
 }
